Integrate the changes made in the 2.4(Rel_2_4_0_14) branch for anonymous user support into main and tag as Rel_2_5_0_2

--- a/src/etc/conf/default/auth.conf
+++ b/src/etc/conf/default/auth.conf
@@ -23,7 +23,12 @@ other {
     // of users is relatively small. It uses two properties files:
     //   users.properties, which holds users (key) and their password (value).
     //   roles.properties, which holds users (key) and a comma-separated list of their roles (value).
-    org.jboss.security.auth.spi.UsersRolesLoginModule required;
+    // The unauthenticatedIdentity property defines the name of the principal
+    // that will be used when a null username and password are presented as is
+    // the case for an unuathenticated web client or MDB. If you don't want to
+    // allow such users to be authenticated remove the property.
+    org.jboss.security.auth.spi.UsersRolesLoginModule required
+       unauthenticatedIdentity="nobody";
 
 };
  
