upgraded to latest turbine
fixed a boat load of import statements
created absolute imports for a lot of the code
added license

everything should compile and run now, however login isn't working. i will
try to figure it out shortly. i have a feeling it is another problem with
a method not being called correctly again like last time.

Now that ECS is gone. IT IS MUCH MUCH MUCH FASTER!!!!!!!!!!!! Turbine
kicks some major ass!!!!!!!!!!!!!! Go Jason van Zyl!!!!!

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.35 2001/07/06 17:33:37 jon Exp $
+# $Id: TurbineResources.properties,v 1.36 2001/07/11 07:33:46 jon Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -28,7 +28,7 @@
 # must be named 'default'. This is used for all logging
 # where an explicit category is not specified.
 
-log4j.category.default = INFO, default
+log4j.category.default = ALL, default
 log4j.appender.default = org.apache.log4j.FileAppender
 log4j.appender.default.file = ${webapp}/logs/turbine.log
 log4j.appender.default.layout = org.apache.log4j.PatternLayout
@@ -285,7 +285,7 @@ services.LocalizationService.classname=org.apache.turbine.services.localization.
 services.MimeTypeService.classname=org.apache.turbine.services.mimetype.TurbineMimeTypeService
 services.GlobalCacheService.classname=org.apache.turbine.services.cache.TurbineGlobalCacheService
 services.SchedulerService.classname=org.apache.turbine.services.schedule.TurbineSchedulerService
-services.XmlRpcService.classname=org.apache.turbine.services.xmlrpc.TurbineXmlRpcService
+#services.XmlRpcService.classname=org.apache.turbine.services.xmlrpc.TurbineXmlRpcService
 services.UniqueIdService.classname=org.apache.turbine.services.uniqueid.TurbineUniqueIdService
 services.UploadService.classname=org.apache.turbine.services.upload.TurbineUploadService
 services.SecurityService.classname=org.tigris.scarab.services.ScarabDBSecurityService
@@ -498,7 +498,7 @@ services.PullService.toolsPerRequestRefresh=true
 services.PullService.tool.request.link=org.tigris.scarab.util.ScarabLink
 services.PullService.tool.request.page=org.apache.turbine.util.template.TemplatePageAttributes
 services.PullService.tool.request.content=org.apache.turbine.util.ContentURI
-services.PullService.tool.request.flux=org.apache.turbine.flux.tools.FluxTool
+#services.PullService.tool.request.flux=org.apache.turbine.flux.tools.FluxTool
 
 # These are intake tools.
 services.PullService.tool.request.om=org.apache.turbine.om.OMTool
@@ -516,6 +516,25 @@ services.PullService.earlyInit = true
 tool.ui.skin=default
 #tool.om.factory=my.package.TorqueFactory
 
+# -------------------------------------------------------------------
+# 
+#  T E M P L A T E  S E R V I C E
+#
+# -------------------------------------------------------------------
+
+# Roughly, the number of templates in each category.
+#
+# Defaults: layout=2, navigation=10, screen=50
+
+services.TemplateService.default.page = ScarabPage
+services.TemplateService.default.screen=TemplateScreen
+services.TemplateService.default.layout = TemplateLayout
+services.TemplateService.default.navigation=TemplateNavigation
+services.TemplateService.default.error.screen = Error
+
+services.TemplateService.layout.cache.size=2
+services.TemplateService.navigation.cache.size=10
+services.TemplateService.screen.cache.size=50
 
 # -------------------------------------------------------------------
 # 
@@ -529,11 +548,7 @@ tool.ui.skin=default
 # the path to the log file and they should also be relative to webapp root
 
 services.VelocityService.template.extension=vm
-services.VelocityService.default.page = ScarabPage
-services.VelocityService.default.screen=VelocityScreen
-services.VelocityService.default.layout = VelocityOnlyLayout
-services.VelocityService.default.navigation=VelocityNavigation
-services.VelocityService.default.error.screen = VelocityErrorScreen
+services.VelocityService.default.page.template = /Default.vm
 services.VelocityService.default.layout.template = /default.vm
 
 services.VelocityService.runtime.log=/logs/velocity.log
