Default.vm for layout instead of default.vm Issue number: Obtained from: Submitted by: Reviewed by:

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.36 2001/07/11 07:33:46 jon Exp $
+# $Id: TurbineResources.properties,v 1.37 2001/07/11 07:45:22 jon Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -549,7 +549,7 @@ services.TemplateService.screen.cache.size=50
 
 services.VelocityService.template.extension=vm
 services.VelocityService.default.page.template = /Default.vm
-services.VelocityService.default.layout.template = /default.vm
+services.VelocityService.default.layout.template = /Default.vm
 
 services.VelocityService.runtime.log=/logs/velocity.log
 #services.VelocityService.input.encoding=UTF-8
