Add the priority to the server.log layout pattern. Add an example of enabling the custom TRACE priority for all packages in and below org.jboss.ejb.plugins

--- a/src/etc/conf/default/log4j.properties
+++ b/src/etc/conf/default/log4j.properties
@@ -12,7 +12,7 @@ log4j.appender.Default=org.apache.log4j.FileAppender
 log4j.appender.Default.File=../log/server.log
 log4j.appender.Default.layout=org.apache.log4j.PatternLayout
 # Format is [Category] msg\n
-log4j.appender.Default.layout.ConversionPattern=[%c{1}] %m%n
+log4j.appender.Default.layout.ConversionPattern=[%c{1},%p] %m%n
 # Truncate if it aleady exists.
 log4j.appender.Default.Append=false
 
@@ -26,3 +26,7 @@ log4j.appender.Console.layout.ConversionPattern=[%c{1}] %m%n
 #log4j.category.DefaultDS=FATAL
 # Example of only showing INFO msgs for any categories under org.jboss.util
 #log4j.category.org.jboss.util=INFO
+
+# Turn on TRACE level msgs for the org.jboss.ejb.plugins package
+#log4j.category.org.jboss.ejb.plugins=TRACE#org.jboss.logging.log4j.TracePriority
+
