Add a sample format useful for debugging concurrency issues. Document the custom TRACE priority a little bit more

--- a/src/etc/conf/default/log4j.properties
+++ b/src/etc/conf/default/log4j.properties
@@ -11,8 +11,10 @@ log4j.rootCategory=DEBUG, Default, Console
 log4j.appender.Default=org.apache.log4j.FileAppender
 log4j.appender.Default.File=../log/server.log
 log4j.appender.Default.layout=org.apache.log4j.PatternLayout
-# Format is [Category] msg\n
+# A default format: [Category] msg\n
 log4j.appender.Default.layout.ConversionPattern=[%c{1},%p] %m%n
+# A format useful for debugging concurrency: [Category,thread,elapased_ms] msg\n
+#log4j.appender.Default.layout.ConversionPattern=[%c{1},%t,%r] %m%n
 # Truncate if it aleady exists.
 log4j.appender.Default.Append=false
 
@@ -27,6 +29,9 @@ log4j.appender.Console.layout.ConversionPattern=[%c{1}] %m%n
 # Example of only showing INFO msgs for any categories under org.jboss.util
 #log4j.category.org.jboss.util=INFO
 
-# Turn on TRACE level msgs for the org.jboss.ejb.plugins package
+# An example of enabling the custom TRACE level priority that is used
+# by the JBoss internals to diagnose low level details. This example
+# turns on TRACE level msgs for the org.jboss.ejb.plugins package and its
+# subpackages. This will produce A LOT of logging output.
 #log4j.category.org.jboss.ejb.plugins=TRACE#org.jboss.logging.log4j.TracePriority
 
