once again, more changes to reflect the latest Turbine stuff.
known broken part is the $page.Title doesn't seem to be set properly
will be fixed soon by jason i'm sure.

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.37 2001/07/11 07:45:22 jon Exp $
+# $Id: TurbineResources.properties,v 1.38 2001/07/13 23:18:13 jon Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -111,6 +111,27 @@ scheduledjob.cache.size=10
 # -------------------------------------------------------------------
 
 module.packages=org.tigris.scarab,org.apache.turbine.flux.modules
+
+# These are the default modules to emulate the Turbine
+# 2.1 page/layout/nav/screen system.
+
+module.default.actions = TemplateAction
+module.default.screens=TemplateScreen
+module.default.layouts = TemplateLayout
+module.default.navigations=TemplateNavigation
+
+# You can define any module type you wish here and
+# they will be added to Turbine's module processing
+# system. You must provide a default module!
+#
+# module.default.woogy = Boogie
+# module.default.floogy = Moogie
+
+pipeline.default = org.tigris.scarab.pages.ScarabPage
+pipeline.default.targetModuleType = screens
+
+template.default = /Default
+template.default.extension = vm
 
 # -------------------------------------------------------------------
 # 
