latest turbine.jar fixed path to DBsomething in the tr.props fixed imports that john broke by accident
i tested things and everything seems work dandy now. it is safe to cvs
update on scarab.

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.38 2001/07/13 23:18:13 jon Exp $
+# $Id: TurbineResources.properties,v 1.39 2001/07/17 07:46:04 jon Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -709,7 +709,7 @@ services.SecurityService.userPeer.class=org.tigris.scarab.om.ScarabUserImplPeer
 # Default implementation uses Peers and a relational database .
 #
 
-services.SecurityService.user.manager=org.apache.turbine.services.security.db.DBUserManager
+services.SecurityService.user.manager=org.apache.turbine.services.security.impl.db.DBUserManager
 
 #
 # This is used by the SecurityService to make the password checking
