added RModuleUserAttribute group.

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.39 2001/07/17 07:46:04 jon Exp $
+# $Id: TurbineResources.properties,v 1.40 2001/07/18 23:09:48 elicia Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -336,8 +336,8 @@ services.DatabaseService.database.default=default
 
 services.DatabaseService.database.default.driver=org.gjt.mm.mysql.Driver
 services.DatabaseService.database.default.url=jdbc:mysql://localhost:3306/scarab
-services.DatabaseService.database.default.username=
-services.DatabaseService.database.default.password=
+services.DatabaseService.database.default.username=tigris
+services.DatabaseService.database.default.password=euphrates
 
 # The number of database connections to cache per ConnectionPool
 # instance (specified per database).
