integration of a patch from bilal that integrates ScarabModule and Module into just ScarabModule. thanks bilal!
<http://scarab.tigris.org/servlets/ReadMsg?msgId=31179&listName=dev>

i also cleaned up a couple places where the base classes were being used
instead of the interfaces and added a method to ModuleEntity in order to
accomplish this.

-jon

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.40 2001/07/18 23:09:48 elicia Exp $
+# $Id: TurbineResources.properties,v 1.41 2001/07/19 21:30:05 jon Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -336,8 +336,8 @@ services.DatabaseService.database.default=default
 
 services.DatabaseService.database.default.driver=org.gjt.mm.mysql.Driver
 services.DatabaseService.database.default.url=jdbc:mysql://localhost:3306/scarab
-services.DatabaseService.database.default.username=tigris
-services.DatabaseService.database.default.password=euphrates
+services.DatabaseService.database.default.username=
+services.DatabaseService.database.default.password=
 
 # The number of database connections to cache per ConnectionPool
 # instance (specified per database).
