- Removed deprecated method in OptionHandler.java.
- Chaged HierarchyEventListener to accept new events removed the addCategory event.

PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/java/org/apache/log4j/spi/Makefile
+++ b/src/java/org/apache/log4j/spi/Makefile
@@ -13,6 +13,7 @@ JSOURCES:=OptionHandler.java\
 	Configurator.java\
         ThrowableInformation.java\
 	TriggeringEventEvaluator.java\
+        HierarchyEventListener.java\
 
 SUBDIRS := 
 
