--- a/src/java/org/apache/log4j/Makefile
+++ b/src/java/org/apache/log4j/Makefile
@@ -30,7 +30,7 @@ ifdef $(ISJDK1)
 endif
 
 
-SUBDIRS :=helpers spi config or xml net nt varia jmx test performance examples 
+SUBDIRS :=helpers spi config or xml net nt varia test performance examples 
 
 # include master-rule file
 include $(DEPTH)/make/make.inc
