use pull tool as the security tool was broke into two different classes
PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -5,7 +5,7 @@ scarab.email.register.template=email/Confirmation.vm
 
 services.PullService.tool.request.scarabR=org.tigris.scarab.tools.ScarabRequestTool
 services.PullService.tool.global.scarabG=org.tigris.scarab.tools.ScarabGlobalTool
-services.PullService.tool.request.security=org.tigris.scarab.security.TurbineDBScarabSecurity
+services.PullService.tool.request.security=org.tigris.scarab.security.TurbineDBScarabSecurityPull
 
 # This name will be used to distinguish specific scarab application
 # from other instances that it may interact with (in the future).
