flux is working latest turbine
PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.41 2001/07/19 21:30:05 jon Exp $
+# $Id: TurbineResources.properties,v 1.42 2001/07/25 00:48:18 jmcnally Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -519,7 +519,7 @@ services.PullService.toolsPerRequestRefresh=true
 services.PullService.tool.request.link=org.tigris.scarab.util.ScarabLink
 services.PullService.tool.request.page=org.apache.turbine.util.template.TemplatePageAttributes
 services.PullService.tool.request.content=org.apache.turbine.util.ContentURI
-#services.PullService.tool.request.flux=org.apache.turbine.flux.tools.FluxTool
+services.PullService.tool.request.flux=org.apache.turbine.flux.tools.FluxTool
 
 # These are intake tools.
 services.PullService.tool.request.om=org.apache.turbine.om.OMTool
