- Added the addHierarchyEventListener method to Hierarchy.
- Removed a bunch of deprecated stuff from Appenders.

- Corrected the restart bug DailyRollingFileAppender.

PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/java/org/apache/log4j/test/Makefile
+++ b/src/java/org/apache/log4j/test/Makefile
@@ -28,6 +28,7 @@ JSOURCES:= Shallow.java\
  PrintProperties.java\
  CustomCategoryTest.java\
  FQCNTest.java\
+ DRFATest.java\
 
 ifdef $(ISJDK1)
   JSOURCES:=$(JSOURCES)  UnitTestOR.java
