--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.43 2001/08/02 07:11:36 jon Exp $
+# $Id: TurbineResources.properties,v 1.44 2001/08/03 01:32:50 jmcnally Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -300,7 +300,7 @@ services.MimeTypeService.classname=org.apache.fulcrum.mimetype.TurbineMimeTypeSe
 services.SchedulerService.classname=org.apache.fulcrum.schedule.TurbineSchedulerService
 #services.XmlRpcService.classname=org.apache.fulcrum.xmlrpc.TurbineXmlRpcService
 services.UploadService.classname=org.apache.fulcrum.upload.TurbineUploadService
-services.SecurityService.classname=org.apache.fulcrum.security.impl.db.DBSecurityService
+services.SecurityService.classname=org.tigris.scarab.services.ScarabDBSecurityService
 services.DatabaseService.classname=org.apache.fulcrum.db.TurbineDatabaseService
 #services.XSLTService.classname=org.apache.fulcrum.xslt.TurbineXSLTService
 #services.BSFService.classname=org.apache.fulcrum.bsf.TurbineBSFService
