Added the long awaited MDC.java class.
PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/java/org/apache/log4j/Makefile
+++ b/src/java/org/apache/log4j/Makefile
@@ -24,6 +24,7 @@ JSOURCES:=HTMLLayout.java\
 	Priority.java\
 	WriterAppender.java\
 	ConsoleAppender.java\
+        MDC.java\
 
 ifdef $(ISJDK1)
  JSOURCES:=$(JSOURCES) RollingFileAppenderBeanInfo.java
