added velocimacro ViewIssue.vm

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.44 2001/08/03 01:32:50 jmcnally Exp $
+# $Id: TurbineResources.properties,v 1.45 2001/08/07 18:46:27 elicia Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -541,7 +541,7 @@ services.VelocityService.default.layout.template = /Default.vm
 
 services.VelocityService.runtime.log=/logs/velocity.log
 #services.VelocityService.input.encoding=UTF-8
-services.VelocityService.velocimacro.library = flux/GlobalMacros.vm,GlobalMacros.vm
+services.VelocityService.velocimacro.library = flux/GlobalMacros.vm,GlobalMacros.vm,ViewIssueMacro.vm 
 
 services.VelocityService.resource.loader = file
 services.VelocityService.file.resource.loader.description = Velocity File Resource Loader
