Changed the MDC class so that it will "work" under JDK 1.1.
The behaviour will be equivalent to NOP.


PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/java/org/apache/log4j/helpers/Makefile
+++ b/src/java/org/apache/log4j/helpers/Makefile
@@ -21,6 +21,7 @@ JSOURCES:=LogLog.java\
 	FileWatchdog.java\
 	Loader.java\
         ThreadLocalMap.java\
+        ITLContext.java\
 
 SUBDIRS := 
 
