latest turbine and all its dependencies and changes (mostly import statement changes)
the "ant upgrade-jakarta" target is quite useful now.

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.45 2001/08/07 18:46:27 elicia Exp $
+# $Id: TurbineResources.properties,v 1.46 2001/08/09 07:59:52 jon Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -81,16 +81,6 @@ log4j.appender.sql.append = false
 
 module.cache=false
 
-# If module.cache=true, then how large should we make the hashtables
-# by default.
-
-action.cache.size=20
-layout.cache.size=10
-navigation.cache.size=10
-page.cache.size=5
-screen.cache.size=50
-scheduledjob.cache.size=10
-
 # -------------------------------------------------------------------
 # 
 #  M O D U L E  P A C K A G E S
@@ -114,9 +104,9 @@ module.packages=org.tigris.scarab,org.apache.turbine.flux.modules
 # 2.1 page/layout/nav/screen system.
 
 module.default.actions = TemplateAction
-module.default.screens=TemplateScreen
+module.default.screens = TemplateScreen
 module.default.layouts = TemplateLayout
-module.default.navigations=TemplateNavigation
+module.default.navigations = TemplateNavigation
 
 # You can define any module type you wish here and
 # they will be added to Turbine's module processing
@@ -305,15 +295,15 @@ services.DatabaseService.classname=org.apache.fulcrum.db.TurbineDatabaseService
 #services.XSLTService.classname=org.apache.fulcrum.xslt.TurbineXSLTService
 #services.BSFService.classname=org.apache.fulcrum.bsf.TurbineBSFService
 services.GlobalCacheService.classname=org.apache.fulcrum.cache.TurbineGlobalCacheService
+services.TemplateService.classname=org.apache.fulcrum.template.TurbineTemplateService
 
 services.RunDataService.classname=org.apache.turbine.services.rundata.TurbineRunDataService
 services.LocalizationService.classname=org.apache.turbine.services.localization.TurbineLocalizationService
 services.PullService.classname=org.apache.turbine.services.pull.TurbinePullService
 services.IntakeService.classname=org.apache.turbine.services.intake.TurbineIntakeService
-services.TemplateService.classname=org.apache.turbine.services.template.TurbineTemplateService
 
 # Turn on the appropriate template service.
-services.VelocityService.classname=org.apache.turbine.services.velocity.TurbineVelocityService
+services.VelocityService.classname=org.apache.fulcrum.velocity.TurbineVelocityService
 
 # -------------------------------------------------------------------
 # 
@@ -442,9 +432,9 @@ services.PullService.toolsPerRequestRefresh=true
 #
 # For example:
 #
-# services.PullService.tool.global.ui = org.apache.turbine.util.pull.UIManager
-# services.PullService.tool.global.mm = org.apache.turbine.util.pull.MessageManager
-# services.PullService.tool.request.link = org.apache.turbine.util.template.TemplateLink
+# services.PullService.tool.global.ui = org.apache.turbine.tool.UIManager
+# services.PullService.tool.global.mm = org.apache.turbine.tool.MessageManager
+# services.PullService.tool.request.link = org.apache.turbine.tool.TemplateLink
 # services.PullService.tool.request.page = org.apache.turbine.util.template.TemplatePageAttributes
 #
 # Then:
@@ -483,15 +473,15 @@ services.PullService.toolsPerRequestRefresh=true
 # Defaults: none
 
 services.PullService.tool.request.link=org.tigris.scarab.util.ScarabLink
-services.PullService.tool.request.page=org.apache.turbine.util.template.TemplatePageAttributes
-services.PullService.tool.request.content=org.apache.turbine.util.ContentURI
+services.PullService.tool.request.page=org.tigris.scarab.tools.TemplatePageAttributes
+services.PullService.tool.request.content=org.apache.turbine.tool.ContentURI
 services.PullService.tool.request.flux=org.apache.turbine.flux.tools.FluxTool
 
 # These are intake tools.
-services.PullService.tool.request.om=org.apache.turbine.om.OMTool
-services.PullService.tool.request.intake=org.apache.turbine.services.intake.IntakeTool
+services.PullService.tool.request.om=org.apache.turbine.tool.OMTool
+services.PullService.tool.request.intake=org.apache.turbine.tool.IntakeTool
 
-services.PullService.tool.global.ui=org.apache.turbine.services.pull.util.UIManager
+services.PullService.tool.global.ui=org.apache.turbine.tool.UIManager
 
 services.PullService.earlyInit = true
 
@@ -510,19 +500,9 @@ tool.ui.skin=default
 #
 # -------------------------------------------------------------------
 
-# Roughly, the number of templates in each category.
-#
-# Defaults: layout=2, navigation=10, screen=50
-
-services.TemplateService.default.page = ScarabPage
-services.TemplateService.default.screen=TemplateScreen
-services.TemplateService.default.layout = TemplateLayout
-services.TemplateService.default.navigation=TemplateNavigation
-services.TemplateService.default.error.screen = Error
-
-services.TemplateService.layout.cache.size=2
-services.TemplateService.navigation.cache.size=10
-services.TemplateService.screen.cache.size=50
+# There is no configuration anymore, just an abstract front
+# end to underlying template engines like velocity, webmacro,
+# and JSP.
 
 # -------------------------------------------------------------------
 # 
