solved the problem of copying the templates around. we don't do it anymore. instead, we use the build system to generate the right absolute path to the directory that contains the templates. when we have a WAR creation target, we can do the copy.
so, now all you need to do is edit the templates in the src/templates
directory and you don't need to re-run ant to see your changes! this
should make the designers lives a lot easier.

-jon

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.46 2001/08/09 07:59:52 jon Exp $
+# $Id: TurbineResources.properties,v 1.47 2001/08/09 08:35:57 jon Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -526,7 +526,7 @@ services.VelocityService.velocimacro.library = flux/GlobalMacros.vm,GlobalMacros
 services.VelocityService.resource.loader = file
 services.VelocityService.file.resource.loader.description = Velocity File Resource Loader
 services.VelocityService.file.resource.loader.class = org.apache.velocity.runtime.resource.loader.FileResourceLoader
-services.VelocityService.file.resource.loader.path = /templates,/templates/flux
+services.VelocityService.file.resource.loader.path = @ABSOLUTE_PATH@/templates,@ABSOLUTE_PATH@/templates/flux
 services.VelocityService.file.resource.loader.cache = false
 services.VelocityService.file.resource.loader.modificationCheckInterval = 2
 
