--- a/build.xml
+++ b/build.xml
@@ -10,7 +10,7 @@
 <!--                                                                        -->
 <!-- ====================================================================== -->
 
-<!-- $Id: build.xml,v 1.2 2001/08/11 05:20:20 user57 Exp $ -->
+<!-- $Id: build.xml,v 1.3 2001/08/11 21:26:03 starksm Exp $ -->
 
 <project default="main">
 
@@ -685,9 +685,6 @@
       </fileset>
       <fileset dir="${sun.jaxp.lib}">
         <include name="*.jar"/>
-      </fileset>
-      <fileset dir="${sun.jaas.lib}">
-        <include name="jaas.jar"/>
       </fileset>
     </copy>
 
