o added header comments with Id tags  o tried to get jboss.jcml to fit in 80 cols

--- a/src/etc/conf/default/auth.conf
+++ b/src/etc/conf/default/auth.conf
@@ -1,6 +1,13 @@
+/// ====================================================================== ///
+//                                                                          //
+//  JBoss Authentication Module Configuration                               //
+//                                                                          //
+/// ====================================================================== ///
+
+// $Id: auth.conf,v 1.7 2001/08/11 21:32:45 user57 Exp $
+
 // Put login modules providing authentication and realm mappings
 // for security domains.
-
 
 simple {
     // Very simple login module: 
@@ -29,6 +36,5 @@ other {
     // allow such users to be authenticated remove the property.
     org.jboss.security.auth.spi.UsersRolesLoginModule required
        unauthenticatedIdentity="nobody";
-
 };
  
