--- a/src/etc/conf/default/log4j.properties
+++ b/src/etc/conf/default/log4j.properties
@@ -1,6 +1,12 @@
-# The standard log4j properties for the default
-# JBoss server config. This creates a server.log appender
-# and a console appender.
+### ====================================================================== ###
+##                                                                          ##
+##  JBoss Log4j Properties                                                  ##
+##                                                                          ##
+### ====================================================================== ###
+
+### $Id: log4j.properties,v 1.11 2001/08/11 21:32:45 user57 Exp $ ###
+
+# This creates a server.log appender and a console appender.
 
 # Set the JBossCategoryFactory as the default CategoryFactory
 log4j.categoryFactory=org.jboss.logging.log4j.JBossCategory$JBossCategoryFactory
@@ -8,6 +14,7 @@ log4j.categoryFactory=org.jboss.logging.log4j.JBossCategory$JBossCategoryFactory
 log4j.rootCategory=DEBUG, Default, Console
 
 ### The server.log file appender
+
 log4j.appender.Default=org.apache.log4j.FileAppender
 log4j.appender.Default.File=../log/server.log
 log4j.appender.Default.layout=org.apache.log4j.PatternLayout
@@ -19,6 +26,7 @@ log4j.appender.Default.layout.ConversionPattern=[%c{1},%p] %m%n
 log4j.appender.Default.Append=false
 
 ### The console appender
+
 log4j.appender.Console=org.jboss.logging.log4j.ConsoleAppender
 log4j.appender.Console.Threshold=INFO
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
