--- a/src/etc/conf/default/jboss.conf
+++ b/src/etc/conf/default/jboss.conf
@@ -4,49 +4,61 @@
 <!--                                                                       -->
 <!-- ===================================================================== -->
 
-<MLET CODE = "org.jboss.logging.Logger" ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
+<!-- $Id: jboss.conf,v 1.21 2001/08/11 21:32:45 user57 Exp $ -->
+
+<MLET CODE="org.jboss.logging.Logger" 
+      ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
 </MLET>
 
 <!-- The log4j based logging service based on the conf log4j.properties file -->
-<MLET CODE = "org.jboss.logging.Log4jService" ARCHIVE="jboss.jar,log4j.jar" CODEBASE="../../lib/ext/">
+<MLET CODE="org.jboss.logging.Log4jService" 
+      ARCHIVE="jboss.jar,log4j.jar" CODEBASE="../../lib/ext/">
 </MLET>
 
 <!-- Place the config directory in the classpath -->
-<MLET CODE = "org.jboss.util.ClassPathExtension" ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
+<MLET CODE="org.jboss.util.ClassPathExtension" 
+      ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
    <ARG TYPE="java.lang.String" VALUE="./">
 </MLET>
 
-<MLET CODE = "org.jboss.util.Info" ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
+<MLET CODE="org.jboss.util.Info" 
+      ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
 </MLET>
 
-<MLET CODE = "org.jboss.util.ClassPathExtension" ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
+<MLET CODE="org.jboss.util.ClassPathExtension"
+      ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
    <ARG TYPE="java.lang.String" VALUE="../../tmp/">
 </MLET>
 
-<MLET CODE = "org.jboss.util.ClassPathExtension" ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
+<MLET CODE="org.jboss.util.ClassPathExtension" 
+      ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
    <ARG TYPE="java.lang.String" VALUE="../../db/">
 </MLET>
 
-
 <!-- Uncomment to add Tomcat classes to classpath
-  -- MLET CODE = "org.jboss.util.ClassPathExtension" ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
+  -- MLET CODE="org.jboss.util.ClassPathExtension" 
+  --      ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
   --   ARG TYPE="java.lang.String" VALUE="path to tomcat "/lib" goes here">
   --   ARG TYPE="java.lang.String" VALUE="Tomcat">
   -- /MLET>
   -->
 
 <!-- Uncomment to add Jetty classes to classpath (make sure Arg1 ends in a slash)
-  -- MLET CODE = "org.jboss.util.ClassPathExtension" ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
+  -- MLET CODE="org.jboss.util.ClassPathExtension"
+  --      ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
   --   ARG TYPE="java.lang.String" VALUE="path to Jetty/lib/ e.g. /usr/local/Jetty3/lib/">
   --   ARG TYPE="java.lang.String" VALUE="Jetty">
   -- /MLET>
   -->
 
-<MLET CODE = "org.jboss.configuration.ConfigurationService" ARCHIVE="jboss.jar,../xml.jar" CODEBASE="../../lib/ext/">
+<MLET CODE="org.jboss.configuration.ConfigurationService" 
+      ARCHIVE="jboss.jar,../xml.jar" CODEBASE="../../lib/ext/">
 </MLET>
 
-<MLET CODE = "org.jboss.util.Shutdown" ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
+<MLET CODE="org.jboss.util.Shutdown" 
+      ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
 </MLET>
 
-<MLET CODE = "org.jboss.util.ServiceControl" ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
+<MLET CODE="org.jboss.util.ServiceControl" 
+      ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
 </MLET>
