--- a/src/etc/conf/default/mail.properties
+++ b/src/etc/conf/default/mail.properties
@@ -1,7 +1,15 @@
-mail.store.protocol		= pop3
+### ====================================================================== ###
+##                                                                          ##
+##  JBoss JavaMail Properties                                               ##
+##                                                                          ##
+### ====================================================================== ###
+
+### $Id: mail.properties,v 1.3 2001/08/11 21:32:45 user57 Exp $ ###
+
+mail.store.protocol     = pop3
 mail.transport.protocol = smtp
-mail.user				= biorn_steedom
-mail.pop3.host			= pop.mail.yahoo.com
-mail.smtp.host			= smtp.mail.yahoo.com
-mail.from				= biorn_steedom@yahoo.com
-mail.debug				= false
+mail.user               = biorn_steedom
+mail.pop3.host          = pop.mail.yahoo.com
+mail.smtp.host          = smtp.mail.yahoo.com
+mail.from               = biorn_steedom@yahoo.com
+mail.debug              = false
