this should fix these errors:
2001-08-12 16:06:29,452 [HttpProcessor[8080][3]] ERROR default -
java.lang.Class
NotFoundException: org.tigris.scarab.om.Module

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.47 2001/08/09 08:35:57 jon Exp $
+# $Id: TurbineResources.properties,v 1.48 2001/08/12 23:09:19 jon Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -103,10 +103,13 @@ module.packages=org.tigris.scarab,org.apache.turbine.flux.modules
 # These are the default modules to emulate the Turbine
 # 2.1 page/layout/nav/screen system.
 
+module.default.base = Module
 module.default.actions = TemplateAction
 module.default.screens = TemplateScreen
-module.default.layouts = TemplateLayout
-module.default.navigations = TemplateNavigation
+
+#module.mapping.screens = base
+module.mapping.layouts = base
+module.mapping.navigations = base
 
 # You can define any module type you wish here and
 # they will be added to Turbine's module processing
@@ -218,19 +221,6 @@ default.doctype=Html40Transitional
 
 # -------------------------------------------------------------------
 # 
-#  P E E R S
-#
-# -------------------------------------------------------------------
-# Supplies Turbine with information about the database schema, which
-# can simplify any required Peer classes.
-#
-# Default: org.apache.turbine.util.db.map.TurbineMapBuilder
-# -------------------------------------------------------------------
-
-#database.maps.builder=org.apache.turbine.util.db.map.TurbineMapBuilder
-
-# -------------------------------------------------------------------
-# 
 #  M E S S A G E S
 #
 # -------------------------------------------------------------------
@@ -317,7 +307,6 @@ services.VelocityService.classname=org.apache.fulcrum.velocity.TurbineVelocitySe
 # The parameters to connect to the default database.  You MUST
 # configure these properly.
 # -------------------------------------------------------------------
-services.DatabaseService.earlyInit = true
 
 services.DatabaseService.database.default=default
 
@@ -364,6 +353,17 @@ services.DatabaseService.database.adaptor.DBMM=org.gjt.mm.mysql.Driver
 # volume.
 
 services.DatabaseService.database.idbroker.cleverquantity=true
+
+# Determines if IDBroker should prefetch IDs or not.  If set to false
+# this property has the effect of shutting off the housekeeping thread
+# that attempts to prefetch the id's.  It also sets the # of id's grabbed
+# per request to 1 regardless of the settings in the database.
+# Default: true
+
+services.DatabaseService.database.idbroker.prefetch=true
+
+services.DatabaseService.earlyInit = true
+
 
 # -------------------------------------------------------------------
 #
@@ -473,7 +473,7 @@ services.PullService.toolsPerRequestRefresh=true
 # Defaults: none
 
 services.PullService.tool.request.link=org.tigris.scarab.util.ScarabLink
-services.PullService.tool.request.page=org.tigris.scarab.tools.TemplatePageAttributes
+services.PullService.tool.request.page=org.apache.turbine.tool.TemplatePageAttributes
 services.PullService.tool.request.content=org.apache.turbine.tool.ContentURI
 services.PullService.tool.request.flux=org.apache.turbine.flux.tools.FluxTool
 
