latest velocity now supports auto reloading of Velocimacro library files.
this means that if you change a macro in one of these files:

services.VelocityService.velocimacro.library =
flux/GlobalMacros.vm,GlobalMacros.vm,ViewIssueMacro.vm

it should now be smart enough to auto reload that macro.

thanks for geir for listening and implementing this. :-)

-jon

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.48 2001/08/12 23:09:19 jon Exp $
+# $Id: TurbineResources.properties,v 1.49 2001/08/13 16:40:29 jon Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -535,6 +535,7 @@ services.VelocityService.classpath.resource.loader.description = Velocity Classp
 services.VelocityService.classpath.resource.loader.class = org.apache.velocity.runtime.resource.loader.ClasspathResourceLoader
 
 services.VelocityService.velocimacro.permissions.allow.inline.to.replace.global=true
+services.VelocityService.velocimacro.library.autoreload=true
 
 services.VelocityService.earlyInit = true
 
