o including jaxp and crimson in the archive value for Log4jService    (so parsing xml configuration works again).  o explicitly using the constructor to specify which file is read.

--- a/src/etc/conf/default/jboss.conf
+++ b/src/etc/conf/default/jboss.conf
@@ -4,15 +4,19 @@
 <!--                                                                       -->
 <!-- ===================================================================== -->
 
-<!-- $Id: jboss.conf,v 1.21 2001/08/11 21:32:45 user57 Exp $ -->
+<!-- $Id: jboss.conf,v 1.22 2001/08/14 06:14:47 user57 Exp $ -->
 
 <MLET CODE="org.jboss.logging.Logger" 
       ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
 </MLET>
 
-<!-- The log4j based logging service based on the conf log4j.properties file -->
+<!-- The log4j based logging service -->
 <MLET CODE="org.jboss.logging.Log4jService" 
-      ARCHIVE="jboss.jar,log4j.jar" CODEBASE="../../lib/ext/">
+      CODEBASE="../../lib/ext/" 
+      ARCHIVE="jboss.jar,log4j.jar,jaxp.jar,crimson.jar">
+
+   <!-- Read the conf/*/log4j.properties file -->
+   <arg type="java.lang.String" value="log4j.properties">
 </MLET>
 
 <!-- Place the config directory in the classpath -->
