latest gang of changes

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.49 2001/08/13 16:40:29 jon Exp $
+# $Id: TurbineResources.properties,v 1.50 2001/08/16 05:47:38 jon Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -103,13 +103,10 @@ module.packages=org.tigris.scarab,org.apache.turbine.flux.modules
 # These are the default modules to emulate the Turbine
 # 2.1 page/layout/nav/screen system.
 
-module.default.base = Module
-module.default.actions = TemplateAction
-module.default.screens = TemplateScreen
-
-#module.mapping.screens = base
-module.mapping.layouts = base
-module.mapping.navigations = base
+module.default.actions = actions.TemplateAction
+module.default.layouts = Module
+module.default.navigations = Module
+module.default.screens = Module
 
 # You can define any module type you wish here and
 # they will be added to Turbine's module processing
@@ -172,7 +169,7 @@ action.logout=Logout
 #
 # Default: SessionValidator
 
-action.sessionvalidator=sessionvalidator.TemplateSessionValidator
+action.sessionvalidator=TemplateSessionValidator
 
 # This is the timeout in seconds for sessions. If left commented out, the
 # servlet container's default timeout will be left as is.
