--- a/src/etc/conf/default/mail.properties
+++ b/src/etc/conf/default/mail.properties
@@ -4,12 +4,18 @@
 ##                                                                          ##
 ### ====================================================================== ###
 
-### $Id: mail.properties,v 1.3 2001/08/11 21:32:45 user57 Exp $ ###
+### $Id: mail.properties,v 1.4 2001/08/21 15:57:18 starksm Exp $ ###
 
-mail.store.protocol     = pop3
+# Change to your mail server prototocol
+mail.store.protocol = pop3
 mail.transport.protocol = smtp
-mail.user               = biorn_steedom
-mail.pop3.host          = pop.mail.yahoo.com
-mail.smtp.host          = smtp.mail.yahoo.com
-mail.from               = biorn_steedom@yahoo.com
-mail.debug              = false
+# Change to the user who will receive mail
+mail.user = to_user
+# Change to the mail server 
+mail.pop3.host = pop.dot.com
+# Change to the SMTP gateway server
+mail.smtp.host = smtp.dot.com
+# Change to the address mail will be from
+mail.from = from_user@mail.dot.com
+# Enable debugging output from the javamail classes
+mail.debug = false
